[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
config = "0.13"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
  "runtime-actix-rustls",
  "postgres",
  "macros",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
reqwest = "0.11.11"
