[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
chrono = "0.4.21"
config = "0.13"
secrecy = {version = "0.8", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde-aux = "4"
tokio = {version = "1.19.2", features = ["macros", "rt-multi-thread"]}
tracing = {version = '0.1', features = ['log']}
tracing-actix-web = "0.6"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = {version = '0.3', features = ["registry", "env-filter"]}
unicode-segmentation = "1"
uuid = {version = "1", features = ["v4"]}
validator = "0.16"

[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls",
  "postgres",
  "macros",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.6.2"

[dev-dependencies]
claim = "0.5"
once_cell = "1"
reqwest = "0.11.11"
