[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1"
argon2 = {version = "0.4", features = ["std"]}
base64 = "0.13"
chrono = "0.4.21"
config = "0.13"
rand = {version = "0.8", features = ["std_rng"]}
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
secrecy = {version = "0.8", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde-aux = "4"
thiserror = "1"
tokio = {version = "1.19.2", features = ["macros", "rt-multi-thread"]}
tracing = {version = '0.1', features = ['log']}
tracing-actix-web = "0.7.0"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = {version = '0.3', features = ["registry", "env-filter"]}
unicode-segmentation = "1"
uuid = {version = "1", features = ["v4"]}
validator = "0.16"

[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls",
  "postgres",
  "macros",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.6.2"

[dev-dependencies]
claim = "0.5"
fake = "~2.3"
linkify = "0.9"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
tokio = {version = "1", features = ["rt", "macros"]}
wiremock = "0.5"
